2008-10-30  Sven Neumann  <sven@gimp.org>

	* app/text/gimptextlayout.c: fixed order of includes.

	* app/text/gimptext-compat.c: ported to PangoCairo like the rest
	of the text rendering code.

2008-10-30  Sven Neumann  <sven@gimp.org>

	* app/text/gimptextlayout-render.c: removed an obsolete and
	misleading comment.

2008-10-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.def
	* libgimpbase/gimpbase.def
	* libgimpcolor/gimpcolor.def: updated with new symbols.

2008-10-29  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 558215 – unit and zoom entries in Statusbar not visible

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_size_allocate): Don't try to be clever,
	call gimp_display_shell_scaled() whenever the canvas size changes
	so a newly created display shell gets updated properly.

2008-10-29  Sven Neumann  <sven@gimp.org>

	Bug 558451 – Cannot build GIMP using Sun CC on Solaris 2.8

	* app/pdb/gimp-pdb-compat.c
	* app/gegl/gimpoperationtilesink.c
	* app/gegl/gimpoperationtilesource.c
	* app/tools/gimpgegltool.c: applied patches from Eric Lamarque
	fixing the build using Sun CC on Solaris.

2008-10-29  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c
	(gimp_operation_point_layer_mode_process): Implemented the layer
	modes Hue, Saturation, Color and Value.

	Works the same for 100% opaque layers:
	 o Hue
	 o Saturation
	 o Color
	 o Value

	* libgimpcolor/gimphsl.[ch]: Added gimp_hsl_set().

2008-10-29  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/file-pdf.c: a comment was still saying
	"poppler.c".

2008-10-29  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpselection.[ch]: change member "gboolean stroking"
	into "gint stroking_count". Add push/pop API to increase/decrease
	the counter. Pretend the selection is empty if the counter is > 0.
	Enables correctly rendering vector layers even if there is a
	selection.

2008-10-29  Sven Neumann  <sven@gimp.org>
